# trading

./: .gitignore
quant-trading-system/: .env.cloud  .env.example  CHANGELOG.md  FIRST_STEPS.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  start_local.py  test_cloud_connection.py  test_order_flow.py  test_sheng_flow_simple.py  verify_phase4.py
quant-trading-system/alembic/: env.py
quant-trading-system/docs/: AKShare_DATA_GUIDE.md  AUTH_SETUP.md  CODE_REVIEW_PHASE4.md  DATABASE_DESIGN.md  DATA_SOURCE_ALTERNATIVES.md  DEVELOPMENT.md  DEVELOPMENT_COMPASS.md  Day7_Test_Report.md  IMPLEMENTATION_PLAN.md  LOCAL_DEV_SETUP.md  MARKET_DATA_DESIGN.md  Phase_1_Execution_Plan.md  Phase_1_Optimization_Plan.md  Phase_2_Execution_Plan.md  Phase_3_Execution_Plan.md  Phase_4_Execution_Plan.md  Phase_5_Execution_Plan.md  Phase_6_Execution_Plan.md  QUICKSTART_CLOUD.md  QUICKSTART_DB.md  QUICKSTART_LOCAL.md  ROADMAP.md  Sprint_1_Plan.md  TEST_PLAN.md  TUSHARE_INTEGRATION.md
quant-trading-system/docs/api/: README.md  execution.md  finance.md  intelligence.md  market_data.md  reports.md  risk.md  strategy.md  websocket.md
quant-trading-system/monitoring/prometheus/: prometheus.yml  rules.yml
quant-trading-system/scripts/: init_database.py  init_db.py  run_tests.py
quant-trading-system/skills_integration/: __init__.py  cache.py  config.py  rate_limiter.py
quant-trading-system/skills_integration/adapters/: __init__.py  base_adapter.py  mx_finance_data_adapter.py  mx_macro_data_adapter.py  stock_earnings_adapter.py
quant-trading-system/src/: __init__.py  main.py
quant-trading-system/src/api/: __init__.py
quant-trading-system/src/backtest/: __init__.py  data_loader.py  engine.py  metrics.py
quant-trading-system/src/common/: __init__.py  auth.py  config.py  database.py  exceptions.py  logger.py  metrics.py
quant-trading-system/src/core/: __init__.py  auto_trader.py  backtest_cabinet.py  crown_prince.py  data_quality.py  live_cabinet.py  matching_engine.py  menxia_sheng.py  order_event_handlers.py  order_state_machine.py  shangshu_sheng.py  signal_publisher.py  zhongshu_sheng.py
quant-trading-system/src/execution/: __init__.py  engine.py  monitor.py  router.py
quant-trading-system/src/finance/: __init__.py  capital_manager.py  settlement.py
quant-trading-system/src/intelligence/: __init__.py
quant-trading-system/src/market_data/: __init__.py  builder.py  data_service.py  historical.py  manager.py  mock_provider.py  models.py  quality.py  transformer.py
quant-trading-system/src/ministries/: __init__.py  bing_bu_war.py  gong_bu_works.py  hu_bu_revenue.py  li_bu_personnel.py  li_bu_rites.py  xing_bu_justice.py
quant-trading-system/src/models/: __init__.py  account.py  audit_log.py  backtest_task.py  balance_flow.py  base.py  daily_settlement.py  data_quality_log.py  enums.py  market_data.py  order.py  order_state_history.py  position.py  signal_log.py  strategy.py  strategy_backtest.py  strategy_version.py  trade.py  trade_mode.py  user.py
quant-trading-system/src/reports/: __init__.py  comparison.py  export.py  generator.py  metrics.py
quant-trading-system/src/risk/: __init__.py  position_manager.py  risk_manager.py  rules.py  stop_loss.py
quant-trading-system/src/scripts/: init_db.py
quant-trading-system/src/services/: account_service.py  backtest_service.py  matching_service.py  order_service.py  strategy_service.py
quant-trading-system/src/strategy/: __init__.py  base.py  indicators.py  manager.py  portfolio_optimizer.py  selector.py
quant-trading-system/tests/: README.md  conftest.py
quant-trading-system/tests/integration/: test_backtest.py  test_day7_integration.py  test_intelligence.py  test_live_monitoring.py  test_order_lifecycle.py  test_phase1_optimization.py  test_risk_management.py  test_strategy_management.py  test_three_provinces.py
quant-trading-system/tests/performance/: test_matching_performance.py
quant-trading-system/tests/security/: test_input_validation.py  test_input_validation_simple.py
quant-trading-system/tests/unit/: test_kline_builder.py  test_market_data_models.py  test_market_websocket.py  test_matching_engine.py  test_order_state_machine.py  test_risk_management.py
quant-trading-system/web/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
quant-trading-system/web/src/: App.vue
(+124 files in other folders)
