[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "0.1.0"
description = "企业级A股量化交易平台"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Quant Trading Team", email = "quant@your-org.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.104,<0.105",
    "uvicorn[standard]>=0.24,<0.25",
    "pandas>=2.1,<2.2",
    "numpy>=1.26,<1.27",
    "sqlalchemy>=2.0,<2.1",
    "redis>=5.0,<5.1",
    "pydantic>=2.5,<2.6",
    "httpx>=0.25,<0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<7.5",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.1,<4.2",
    "pytest-benchmark>=4.0,<4.1",
    "pytest-xdist>=3.5,<3.6",
    "pytest-mock>=3.12,<3.13",
    "httpx>=0.26,<0.27",
    "black>=23.11,<24.0",
    "flake8>=6.1,<6.2",
    "mypy>=1.7,<1.8",
    "bandit>=1.7,<1.8",
    "factory-boy>=3.3,<3.4",
    "faker>=22.0,<23.0",
]
security = [
    "safety>=2.3,<2.4",
    "pip-audit>=2.6,<2.7",
    "detect-secrets>=1.4,<1.5",
]
monitoring = [
    "prometheus-client>=0.19,<0.20",
    "opentelemetry-api>=1.22,<1.23",
    "structlog>=23.2,<23.3",
]

[project.urls]
Homepage = "https://github.com/your-org/quant-trading-system"
Documentation = "https://docs.your-org.com/quant-trading"
Repository = "https://github.com/your-org/quant-trading-system.git"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--color=yes",
    "-v",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
    "security: 安全测试",
    "performance: 性能测试",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "build",
    "dist",
    "migrations",
]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "invalid-name",
    "protected-access",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-public-methods",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # 跳过assert检查

[project.scripts]
quant-api = "src.api.main:app"
quant-worker = "src.worker.main:main"
quant-scheduler = "src.scheduler.main:main"